--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "fuse.js": "^7.0.0",
