--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,10 @@
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "backup": "node dist/utils/backup.js",
-    "build:scripts": "tsc --project tsconfig.json --outDir dist/scripts src/scripts/linkProfiles.ts",
     "build:scripts": "tsc --project tsconfig.json --outDir dist/scripts src/scripts/linkProfiles.ts"
   },
   "dependencies": {
+    "@types/express-fileupload": "^1.5.1",
     "archiver": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
